--- a/login.html
+++ b/login.html
@@ -216,7 +216,7 @@
             font-weight: 700;
             margin-top: clamp(1rem, 2.6vh, 1.5rem);
             transition: all 0.25s ease;
-            box-shadow: 0 18px 30px rgba(122, 184, 0, 0.22);
+            box-shadow: 0 4px 6px -1px rgba(122, 184, 0, 0.12), 0 2px 4px -1px rgba(122, 184, 0, 0.08);
             letter-spacing: 0.02em;
             text-transform: none;
         }
@@ -224,7 +224,7 @@
         .login-btn:hover {
             background-color: var(--primary-dark);
             transform: translateY(-1px);
-            box-shadow: 0 22px 36px rgba(122, 184, 0, 0.28);
+            box-shadow: 0 6px 10px -1px rgba(122, 184, 0, 0.16), 0 3px 6px -1px rgba(122, 184, 0, 0.1);
         }
 
         .login-btn:active {
