--- a/index.html
+++ b/index.html
@@ -1173,20 +1173,22 @@
             align-items: center;
             gap: 0.45rem;
             cursor: pointer;
-            color: #374151;
+            color: #1e293b;
             font-size: 0.9rem;
             font-weight: 600;
-            padding: 0.45rem 0.75rem;
-            border-radius: 999px;
-            border: 0.5px solid rgba(148, 163, 184, 0.28);
-            background: #f5f7fa;
-            transition: color 0.18s ease, background 0.18s ease, border-color 0.18s ease;
+            padding: 6px 16px;
+            border-radius: 9999px;
+            border: 1px solid rgba(0, 0, 0, 0.04);
+            background: #ffffff;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
+            transition: color 0.18s ease, background 0.18s ease, border-color 0.18s ease, box-shadow 0.18s ease;
         }
 
         .user-panel-trigger:hover {
-            color: #111827;
-            background: #eef1f5;
-            border-color: rgba(148, 163, 184, 0.45);
+            color: #0f172a;
+            background: #f8fafc;
+            border-color: rgba(0, 0, 0, 0.04);
+            box-shadow: 0 6px 22px rgba(0, 0, 0, 0.06);
         }
 
         .user-panel-icon {
@@ -1196,6 +1198,11 @@
             display: inline-flex;
             align-items: center;
             justify-content: center;
+        }
+
+        .user-panel-icon .user-avatar-img {
+            border-radius: 999px;
+            box-shadow: 0 0 0 2px #ffffff, 0 0 0 4px #7AB800;
         }
 
         .user-panel-toggle {
@@ -1223,6 +1230,11 @@
         .user-panel-name {
             color: #16a34a;
             font-weight: 700;
+        }
+
+        .user-panel-trigger .user-name {
+            color: #1e293b;
+            font-weight: 600;
         }
 
         .ui-info {
