--- a/index.html
+++ b/index.html
@@ -1496,7 +1496,7 @@
 
 <body>
 
-    <header class="header" id="header">
+    <header class="header reveal-on-scroll" id="header">
         <div class="container header__container">
             <div class="header__left">
                 <div class="logo-wrapper">
@@ -1646,7 +1646,7 @@
 
     <main class="main">
         <!-- HERO / INTRO -->
-        <section id="estructura-hero" class="section text-center" style="padding-top: 9rem; padding-bottom: 1rem;">
+        <section id="estructura-hero" class="section text-center reveal-on-scroll" style="padding-top: 9rem; padding-bottom: 1rem;">
             <div class="container">
                 <h1 class="section__title mb-2">Departamento Médico</h1>
                 <p class="section__subtitle mb-2">Un ecosistema que potencia el talento</p>
@@ -1693,26 +1693,26 @@
         </section>
 
         <!-- MISION -->
-        <section class="section" id="mision" style="padding-top: 1rem;">
+        <section class="section reveal-on-scroll" id="mision" style="padding-top: 1rem;">
             <div class="container">
                 <div class="section__header">
                     <h2 class="section__title medium-title">Misión y Objetivos</h2>
                 </div>
                 <div class="mision__container">
-                    <div class="mision__item">
+                    <div class="mision__item reveal-on-scroll">
                         <h3>Misión</h3>
                         <p>Garantizar la salud integral en todo el ciclo de la energía. Unificamos los estándares de
                             atención tanto en la exigencia del <strong>Upstream</strong> como en la complejidad
                             industrial del <strong>Downstream</strong>.</p>
                     </div>
-                    <div class="mision__item">
+                    <div class="mision__item reveal-on-scroll">
                         <h3>Visión</h3>
                         <p>Ser el modelo de referencia en medicina empresarial, eliminando barreras geográficas para
                             brindar la misma excelencia en <strong>áreas remotas</strong>, <strong>refinerías</strong> y
                             <strong>sedes corporativas</strong>.
                         </p>
                     </div>
-                    <div class="mision__item">
+                    <div class="mision__item reveal-on-scroll">
                         <h3>Valores</h3>
                         <ul>
                             <li><strong>Estandarización:</strong> Calidad única en cada sector.</li>
@@ -1725,7 +1725,7 @@
         </section>
 
         <!-- KPI – Nuestras métricas -->
-        <section id="kpi" class="hero-dashboard" aria-label="KPI — Nuestras métricas">
+        <section id="kpi" class="hero-dashboard reveal-on-scroll" aria-label="KPI — Nuestras métricas">
             <div class="container">
                 <div class="section__header">
                     <h2 class="section__title medium-title">KPI's - Indicadores.</h2>
@@ -1733,19 +1733,19 @@
                 </div>
 
                 <div class="hero-kpis" role="list">
-                    <article class="kpi-card" role="listitem">
+                    <article class="kpi-card reveal-on-scroll" role="listitem">
                         <div class="kpi-icon"><i data-lucide="users"></i></div>
                         <div id="kpi-members" class="kpi-value tabular-nums" data-dynamic="false">32</div>
                         <div class="kpi-label">Integrantes del equipo</div>
                     </article>
 
-                    <article class="kpi-card" role="listitem">
+                    <article class="kpi-card reveal-on-scroll" role="listitem">
                         <div class="kpi-icon"><i data-lucide="layers"></i></div>
                         <div id="kpi-committees" class="kpi-value tabular-nums">0</div>
                         <div class="kpi-label">Comités especializados</div>
                     </article>
 
-                    <article class="kpi-card" role="listitem">
+                    <article class="kpi-card reveal-on-scroll" role="listitem">
                         <div class="kpi-icon"><i data-lucide="folder-kanban"></i></div>
                         <div id="kpi-projects" class="kpi-value tabular-nums">0</div>
                         <div class="kpi-label">Proyectos en curso</div>
@@ -1755,7 +1755,7 @@
         </section>
 
         <!-- REFERENTES -->
-        <section class="section" id="referentes">
+        <section class="section reveal-on-scroll" id="referentes">
             <div class="container">
                 <div class="section__header">
                     <h2 class="section__title medium-title">Referentes</h2>
@@ -1766,7 +1766,7 @@
                         <summary class="dm-accordion__summary dm-accordion__summary--ceo">Dirección del Departamento</summary>
                         <div class="dm-accordion__content">
                             <div class="referentes__row--top">
-                                <div class="referente__card referente-hero-card">
+                                <div class="referente__card referente-hero-card reveal-on-scroll">
                                     <div class="referente-hero">
                                         <div class="referente-hero-photo">
                                             <img src="assets/images/avatar-leila-final.png" alt="Dra. Leila Cura" width="1000"
@@ -1792,7 +1792,7 @@
                         <div class="dm-accordion__content">
                             <div class="referentes__row--bottom">
                                 <!-- Leader 1 -->
-                                <div class="referente__card leader-card">
+                                <div class="referente__card leader-card reveal-on-scroll">
                                     <div class="referente__img-wrapper">
                                         <img src="assets/images/avatar-silva-new.png" alt="Gustavo Silva"
                                             class="referente__img" width="1000" height="1000" loading="lazy" decoding="async">
@@ -1813,7 +1813,7 @@
                                 </div>
 
                                 <!-- Leader 2 -->
-                                <div class="referente__card leader-card">
+                                <div class="referente__card leader-card reveal-on-scroll">
                                     <div class="referente__img-wrapper">
                                         <img src="assets/images/avatar-azcarate-new.png" alt="Juan Martín Azcárate"
                                             class="referente__img" width="1000" height="1000" loading="lazy" decoding="async">
@@ -1834,7 +1834,7 @@
                                 </div>
 
                                 <!-- Leader 3 -->
-                                <div class="referente__card leader-card">
+                                <div class="referente__card leader-card reveal-on-scroll">
                                     <div class="referente__img-wrapper">
                                         <img src="assets/images/avatar-medina-new.png" alt="Leandro Medina" class="referente__img"
                                             width="1000" height="1000" loading="lazy" decoding="async">
@@ -1859,7 +1859,7 @@
                         <div class="dm-accordion__content">
                             <div class="coordinadores__container">
                                 <!-- Coordinator 1: Juan Maurino -->
-                                <div class="coordinator__card coordinator-card-tier">
+                                <div class="coordinator__card coordinator-card-tier reveal-on-scroll">
                                     <div class="coordinator__img-wrapper">
                                         <img src="assets/images/coord-maurino-new.png" alt="Juan Maurino" class="coordinator__img"
                                             width="1000" height="1000" loading="lazy" decoding="async">
@@ -1869,7 +1869,7 @@
                                 </div>
 
                                 <!-- Coordinator 2: Mario Bianchi -->
-                                <div class="coordinator__card coordinator-card-tier">
+                                <div class="coordinator__card coordinator-card-tier reveal-on-scroll">
                                     <div class="coordinator__img-wrapper">
                                         <img src="assets/images/coord-bianchi-new.png" alt="Mario Bianchi" class="coordinator__img"
                                             width="1000" height="1000" loading="lazy" decoding="async">
@@ -1879,7 +1879,7 @@
                                 </div>
 
                                 <!-- Coordinator 3: Sergio Aciar -->
-                                <div class="coordinator__card coordinator-card-tier">
+                                <div class="coordinator__card coordinator-card-tier reveal-on-scroll">
                                     <div class="coordinator__img-wrapper">
                                         <img src="assets/images/coord-aciar-new.png" alt="Sergio Aciar" class="coordinator__img"
                                             width="1000" height="1000" loading="lazy" decoding="async">
@@ -1889,7 +1889,7 @@
                                 </div>
 
                                 <!-- Coordinator 4: Hernán Rodríguez -->
-                                <div class="coordinator__card coordinator-card-tier">
+                                <div class="coordinator__card coordinator-card-tier reveal-on-scroll">
                                     <div class="coordinator__img-wrapper">
                                         <img src="assets/images/coord-rodriguez-new.png" alt="Hernán Rodríguez"
                                             class="coordinator__img" width="1000" height="1000" loading="lazy" decoding="async">
@@ -1899,7 +1899,7 @@
                                 </div>
 
                                 <!-- Coordinator 5: Roberto Sabha -->
-                                <div class="coordinator__card coordinator-card-tier">
+                                <div class="coordinator__card coordinator-card-tier reveal-on-scroll">
                                     <div class="coordinator__img-wrapper">
                                         <img src="assets/images/coord-sabha-new.png" alt="Roberto Sabha" class="coordinator__img"
                                             width="1000" height="1000" loading="lazy" decoding="async">
@@ -1915,7 +1915,7 @@
         </section>
 
         <!-- ESTRUCTURA FUNCIONAL (New Segment) -->
-        <section class="section orgtree" id="estructura-funcional">
+        <section class="section orgtree reveal-on-scroll" id="estructura-funcional">
             <div class="container">
                 <!-- Main Toggle Button Area -->
                 <div class="structure__toggle-container orgtree-header">
@@ -2010,7 +2010,7 @@
         </section>
 
         <!-- DOCUMENTACIÓN OFICIAL (New Section) -->
-        <section class="section" id="documentacion" style="padding-top: 1rem;"> <!-- Reduced top padding -->
+        <section class="section reveal-on-scroll" id="documentacion" style="padding-top: 1rem;"> <!-- Reduced top padding -->
             <div class="container text-center">
                 <div class="section__header">
                     <h2 class="section__title medium-title" style="margin-bottom: 3rem;">Documentación y Normativa
@@ -2062,7 +2062,7 @@
         <!-- Chart.js REMOVED -->
 
         <!-- COMITES -->
-        <section class="section section--tight" id="comites">
+        <section class="section section--tight reveal-on-scroll" id="comites">
             <div class="container">
                 <div class="section__header section__header--compact">
                     <h2 class="section__title medium-title">Comités de Trabajo</h2>
@@ -2348,7 +2348,7 @@
         </section>
 
         <!-- HERRAMIENTAS DE INVESTIGACIÓN -->
-        <section class="section" id="investigacion"
+        <section class="section reveal-on-scroll" id="investigacion"
             style="background-color: #f9fafb; padding-top: 2rem; padding-bottom: 6rem;">
             <div class="container">
                 <div class="section__header">
@@ -2433,7 +2433,7 @@
 
         <!-- Foro General del Departamento Médico -->
         <!-- Galería Operativa -->
-        <section class="dm-carousel-section" id="carrete" aria-label="Centro de Recursos Visuales">
+        <section class="dm-carousel-section reveal-on-scroll" id="carrete" aria-label="Centro de Recursos Visuales">
             <div id="dm-muro-composer" class="dm-muro-composer" aria-label="Publicar novedad">
                 <div class="dm-muro-composer__inner">
                     <div class="dm-muro-avatar" aria-hidden="true">
@@ -2626,7 +2626,7 @@
         
 
         <!-- Calendario - Cronograma de Actividades -->
-        <section class="section section--tight calendario-section" id="calendario">
+        <section class="section section--tight calendario-section reveal-on-scroll" id="calendario">
             <div class="container">
                 <div class="max-w-5xl mx-auto w-full estructura-calendar">
                                     <div class="calendar-header">
