--- a/index.html
+++ b/index.html
@@ -1699,20 +1699,20 @@
                     <h2 class="section__title medium-title">Misión y Objetivos</h2>
                 </div>
                 <div class="mision__container">
-                    <div class="mision__item reveal-on-scroll">
+                    <div class="mision__item reveal-on-scroll delay-100">
                         <h3>Misión</h3>
                         <p>Garantizar la salud integral en todo el ciclo de la energía. Unificamos los estándares de
                             atención tanto en la exigencia del <strong>Upstream</strong> como en la complejidad
                             industrial del <strong>Downstream</strong>.</p>
                     </div>
-                    <div class="mision__item reveal-on-scroll">
+                    <div class="mision__item reveal-on-scroll delay-200">
                         <h3>Visión</h3>
                         <p>Ser el modelo de referencia en medicina empresarial, eliminando barreras geográficas para
                             brindar la misma excelencia en <strong>áreas remotas</strong>, <strong>refinerías</strong> y
                             <strong>sedes corporativas</strong>.
                         </p>
                     </div>
-                    <div class="mision__item reveal-on-scroll">
+                    <div class="mision__item reveal-on-scroll delay-300">
                         <h3>Valores</h3>
                         <ul>
                             <li><strong>Estandarización:</strong> Calidad única en cada sector.</li>
@@ -1733,19 +1733,19 @@
                 </div>
 
                 <div class="hero-kpis" role="list">
-                    <article class="kpi-card reveal-on-scroll" role="listitem">
+                    <article class="kpi-card reveal-on-scroll delay-100" role="listitem">
                         <div class="kpi-icon"><i data-lucide="users"></i></div>
                         <div id="kpi-members" class="kpi-value tabular-nums" data-dynamic="false">32</div>
                         <div class="kpi-label">Integrantes del equipo</div>
                     </article>
 
-                    <article class="kpi-card reveal-on-scroll" role="listitem">
+                    <article class="kpi-card reveal-on-scroll delay-200" role="listitem">
                         <div class="kpi-icon"><i data-lucide="layers"></i></div>
                         <div id="kpi-committees" class="kpi-value tabular-nums">0</div>
                         <div class="kpi-label">Comités especializados</div>
                     </article>
 
-                    <article class="kpi-card reveal-on-scroll" role="listitem">
+                    <article class="kpi-card reveal-on-scroll delay-300" role="listitem">
                         <div class="kpi-icon"><i data-lucide="folder-kanban"></i></div>
                         <div id="kpi-projects" class="kpi-value tabular-nums">0</div>
                         <div class="kpi-label">Proyectos en curso</div>
@@ -1792,7 +1792,7 @@
                         <div class="dm-accordion__content">
                             <div class="referentes__row--bottom">
                                 <!-- Leader 1 -->
-                                <div class="referente__card leader-card reveal-on-scroll">
+                                <div class="referente__card leader-card reveal-on-scroll delay-100">
                                     <div class="referente__img-wrapper">
                                         <img src="assets/images/avatar-silva-new.png" alt="Gustavo Silva"
                                             class="referente__img" width="1000" height="1000" loading="lazy" decoding="async">
@@ -1813,7 +1813,7 @@
                                 </div>
 
                                 <!-- Leader 2 -->
-                                <div class="referente__card leader-card reveal-on-scroll">
+                                <div class="referente__card leader-card reveal-on-scroll delay-200">
                                     <div class="referente__img-wrapper">
                                         <img src="assets/images/avatar-azcarate-new.png" alt="Juan Martín Azcárate"
                                             class="referente__img" width="1000" height="1000" loading="lazy" decoding="async">
@@ -1834,7 +1834,7 @@
                                 </div>
 
                                 <!-- Leader 3 -->
-                                <div class="referente__card leader-card reveal-on-scroll">
+                                <div class="referente__card leader-card reveal-on-scroll delay-300">
                                     <div class="referente__img-wrapper">
                                         <img src="assets/images/avatar-medina-new.png" alt="Leandro Medina" class="referente__img"
                                             width="1000" height="1000" loading="lazy" decoding="async">
@@ -1859,7 +1859,7 @@
                         <div class="dm-accordion__content">
                             <div class="coordinadores__container">
                                 <!-- Coordinator 1: Juan Maurino -->
-                                <div class="coordinator__card coordinator-card-tier reveal-on-scroll">
+                                <div class="coordinator__card coordinator-card-tier reveal-on-scroll delay-100">
                                     <div class="coordinator__img-wrapper">
                                         <img src="assets/images/coord-maurino-new.png" alt="Juan Maurino" class="coordinator__img"
                                             width="1000" height="1000" loading="lazy" decoding="async">
@@ -1869,7 +1869,7 @@
                                 </div>
 
                                 <!-- Coordinator 2: Mario Bianchi -->
-                                <div class="coordinator__card coordinator-card-tier reveal-on-scroll">
+                                <div class="coordinator__card coordinator-card-tier reveal-on-scroll delay-200">
                                     <div class="coordinator__img-wrapper">
                                         <img src="assets/images/coord-bianchi-new.png" alt="Mario Bianchi" class="coordinator__img"
                                             width="1000" height="1000" loading="lazy" decoding="async">
@@ -1879,7 +1879,7 @@
                                 </div>
 
                                 <!-- Coordinator 3: Sergio Aciar -->
-                                <div class="coordinator__card coordinator-card-tier reveal-on-scroll">
+                                <div class="coordinator__card coordinator-card-tier reveal-on-scroll delay-300">
                                     <div class="coordinator__img-wrapper">
                                         <img src="assets/images/coord-aciar-new.png" alt="Sergio Aciar" class="coordinator__img"
                                             width="1000" height="1000" loading="lazy" decoding="async">
@@ -1889,7 +1889,7 @@
                                 </div>
 
                                 <!-- Coordinator 4: Hernán Rodríguez -->
-                                <div class="coordinator__card coordinator-card-tier reveal-on-scroll">
+                                <div class="coordinator__card coordinator-card-tier reveal-on-scroll delay-100">
                                     <div class="coordinator__img-wrapper">
                                         <img src="assets/images/coord-rodriguez-new.png" alt="Hernán Rodríguez"
                                             class="coordinator__img" width="1000" height="1000" loading="lazy" decoding="async">
@@ -1899,7 +1899,7 @@
                                 </div>
 
                                 <!-- Coordinator 5: Roberto Sabha -->
-                                <div class="coordinator__card coordinator-card-tier reveal-on-scroll">
+                                <div class="coordinator__card coordinator-card-tier reveal-on-scroll delay-200">
                                     <div class="coordinator__img-wrapper">
                                         <img src="assets/images/coord-sabha-new.png" alt="Roberto Sabha" class="coordinator__img"
                                             width="1000" height="1000" loading="lazy" decoding="async">
@@ -2072,7 +2072,7 @@
 
                 <div class="comites__grid">
                     <!-- Comité 1 -->
-                    <article class="comite__card" data-committee-id="comite_ejecutivo_emergencias"
+                    <article class="comite__card reveal-on-scroll delay-100" data-committee-id="comite_ejecutivo_emergencias"
                         data-link="pages/comites/comite-ejecutivo-emergencias.html">
                         <div>
                             <header class="comite__card-header">
@@ -2111,7 +2111,7 @@
                     </article>
 
                     <!-- Comité 2 -->
-                    <article class="comite__card" data-committee-id="comite_salud_ocupacional"
+                    <article class="comite__card reveal-on-scroll delay-200" data-committee-id="comite_salud_ocupacional"
                         data-link="pages/comites/salud-ocupacional.html">
                         <div>
                             <header class="comite__card-header">
@@ -2149,7 +2149,7 @@
                     </article>
 
                     <!-- Comité 3 -->
-                    <article class="comite__card" data-committee-id="comite_calidad_seguridad"
+                    <article class="comite__card reveal-on-scroll delay-300" data-committee-id="comite_calidad_seguridad"
                         data-link="pages/comites/comite-calidad-seguridad.html">
                         <div>
                             <header class="comite__card-header">
@@ -2188,7 +2188,7 @@
                     </article>
 
                     <!-- Comité 4 -->
-                    <article class="comite__card" data-committee-id="comite_salud_digital"
+                    <article class="comite__card reveal-on-scroll delay-100" data-committee-id="comite_salud_digital"
                         data-link="pages/comites/comite-salud-digital.html">
                         <div>
                             <header class="comite__card-header">
@@ -2227,7 +2227,7 @@
                     </article>
 
                     <!-- Comité 5 -->
-                    <article class="comite__card" data-committee-id="comite_docencia_investigacion"
+                    <article class="comite__card reveal-on-scroll delay-200" data-committee-id="comite_docencia_investigacion"
                         data-link="pages/comites/comite-docencia-investigacion.html">
                         <div>
                             <header class="comite__card-header">
@@ -2266,7 +2266,7 @@
                     </article>
 
                     <!-- Comité 6 -->
-                    <article class="comite__card" data-committee-id="comite_farmacia_terapeutica"
+                    <article class="comite__card reveal-on-scroll delay-300" data-committee-id="comite_farmacia_terapeutica"
                         data-link="pages/comites/comite-farmacia-terapeutica.html">
                         <div>
                             <header class="comite__card-header">
@@ -2305,7 +2305,7 @@
                     </article>
 
                     <!-- Comité 7 -->
-                    <article class="comite__card" data-committee-id="comite_bioetica"
+                    <article class="comite__card reveal-on-scroll delay-100" data-committee-id="comite_bioetica"
                         data-link="pages/comites/comite-bioetica.html">
                         <div>
                             <header class="comite__card-header">
