edicion tamaños de titulo

--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
             top: 0;
             left: 0;
             right: 0;
-            height: 6px;
-            background: linear-gradient(90deg, #7AB800, #a9db2f);
+            height: 4px;
+            background: #7AB800;
         }
 
         /* Hero card content layout */
@@ -329,6 +329,7 @@
         .leader-card {
             background: #FFFFFF;
             border-radius: 1.5rem;
+            border-top: 3px solid #7AB800;
             padding: 2rem 1.5rem;
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.06);
             position: relative;
@@ -347,7 +348,7 @@
             top: 0;
             left: 0;
             right: 0;
-            height: 5px;
+            height: 0;
             background: #7AB800;
             /* Solid Corporate Green */
         }
@@ -1696,7 +1697,7 @@
         <section class="section reveal-on-scroll" id="mision" style="padding-top: 1rem;">
             <div class="container">
                 <div class="section__header">
-                    <h2 class="section__title medium-title">Misión y Objetivos</h2>
+                    <h2 class="section__title section-title--unified">Misión y Objetivos</h2>
                 </div>
                 <div class="mision__container">
                     <div class="mision__item reveal-on-scroll delay-100">
@@ -1728,8 +1729,8 @@
         <section id="kpi" class="hero-dashboard reveal-on-scroll" aria-label="KPI — Nuestras métricas">
             <div class="container">
                 <div class="section__header">
-                    <h2 class="section__title medium-title">KPI's - Indicadores.</h2>
-                    <p class="section__subtitle section__subtitle--brisa">Parámetros del Departamento.</p>
+                    <h2 class="section__title section-title--unified">KPI's - Indicadores.</h2>
+                    <p class="section__subtitle section__subtitle--brisa section-subtitle--compact">Parámetros del Departamento.</p>
                 </div>
 
                 <div class="hero-kpis" role="list">
@@ -1758,7 +1759,7 @@
         <section class="section reveal-on-scroll" id="referentes">
             <div class="container">
                 <div class="section__header">
-                    <h2 class="section__title medium-title">Referentes</h2>
+                    <h2 class="section__title section-title--unified">Referentes</h2>
                 </div>
 
                 <div class="referentes__container dm-accordion">
@@ -1855,7 +1856,7 @@
                     </details>
 
                     <details class="dm-accordion__item">
-                        <summary class="dm-accordion__summary dm-accordion__summary--coordinadores">Coordinadores</summary>
+                        <summary class="dm-accordion__summary dm-accordion__summary--coordinadores section-title--unified">Coordinadores</summary>
                         <div class="dm-accordion__content">
                             <div class="coordinadores__container">
                                 <!-- Coordinator 1: Juan Maurino -->
@@ -2013,7 +2014,7 @@
         <section class="section reveal-on-scroll" id="documentacion" style="padding-top: 1rem;"> <!-- Reduced top padding -->
             <div class="container text-center">
                 <div class="section__header">
-                    <h2 class="section__title medium-title" style="margin-bottom: 3rem;">Documentación y Normativa
+                    <h2 class="section__title section-title--unified">Documentación y Normativa
                     </h2>
                 </div>
                 <div class="flex flex-col sm:flex-row gap-4 justify-center max-w-3xl mx-auto mb-16 w-full px-4">
@@ -2065,8 +2066,8 @@
         <section class="section section--tight reveal-on-scroll" id="comites">
             <div class="container">
                 <div class="section__header section__header--compact">
-                    <h2 class="section__title medium-title">Comités de Trabajo</h2>
-                    <span class="section__subtitle section__subtitle--brisa">Equipos focalizados en el desarrollo de cada
+                    <h2 class="section__title section-title--unified">Comités de Trabajo</h2>
+                    <span class="section__subtitle section__subtitle--brisa section-subtitle--compact">Equipos focalizados en el desarrollo de cada
                         <strong>vertical</strong> del servicio médico.</span>
                 </div>
 
@@ -2352,8 +2353,8 @@
             style="background-color: #f9fafb; padding-top: 2rem; padding-bottom: 6rem;">
             <div class="container">
                 <div class="section__header">
-                    <h2 class="section__title medium-title dm-title">Motor de Evidencia Científica</h2>
-                    <span class="section__subtitle">Acceso directo a bases
+                    <h2 class="section__title dm-title section-title--unified">Motor de Evidencia Científica</h2>
+                    <span class="section__subtitle section-subtitle--compact">Acceso directo a bases
                         de datos biomédicas e inteligencia artificial clínica.</span>
                 </div>
 
@@ -2458,7 +2459,7 @@
             </div>
             <div class="dm-carousel-header">
                 <div class="dm-carousel-title">
-                    <h2 class="section__title medium-title dm-title dm-title-center">
+                    <h2 class="section__title dm-title dm-title-center section-title--unified">
                         <span class="dm-title-line">Centro de Recursos Visuales</span>
                     </h2>
                 </div>
@@ -2578,7 +2579,7 @@
 
         <div id="foro" class="mt-16 mb-8 max-w-5xl mx-auto w-full">
             <div class="text-center mb-8">
-                <h2 class="section__title medium-title dm-title">
+                <h2 class="section__title dm-title section-title--unified">
                     <i data-lucide="message-square" class="w-8 h-8 text-brisa"></i>
                     Foro General del Departamento Médico
                 </h2>
@@ -2630,7 +2631,7 @@
             <div class="container">
                 <div class="max-w-5xl mx-auto w-full estructura-calendar">
                                     <div class="calendar-header">
-                                        <h2 class="section__title medium-title dm-title">
+                                        <h2 class="section__title dm-title section-title--unified">
                                             <i data-lucide="calendar" class="w-8 h-8 text-brisa"></i>
                                             Calendario – Cronograma de Actividades
                                         </h2>
