--- a/index.html
+++ b/index.html
@@ -2517,7 +2517,9 @@
                 <div class="dm-console-right">
                     <button id="dm-like" class="dm-console-btn" type="button" aria-label="Me gusta" data-tip="Me gusta">❤️ <span id="dm-like-count">0</span></button>
                     <button id="dm-add-image" class="dm-console-btn dm-add-image-btn" type="button" aria-label="Agregar imagen">+ Agregar imagen</button>
-                    <button id="dm-delete" class="dm-console-btn dm-delete-admin" type="button" aria-label="Eliminar imagen" data-tip="Borrar imagen">🗑</button>
+                    <button id="dm-delete" class="dm-console-btn dm-delete-admin" type="button" aria-label="Eliminar imagen" data-tip="Borrar imagen">
+                        <i data-lucide="trash-2" class="dm-delete-icon" aria-hidden="true"></i>
+                    </button>
                 </div>
             </div>
         </section>
