--- a/index.html
+++ b/index.html
@@ -2585,7 +2585,7 @@
                     <i data-lucide="message-square" class="w-8 h-8 text-brisa"></i>
                     Foro General del Departamento Médico
                 </h2>
-                <p class="text-gray-500 font-medium">
+                <p class="text-gray-500 font-medium forum-subtitle">
                     Espacio de colaboración y avisos para todo el Departamento Médico.
                 </p>
             </div>
@@ -2610,16 +2610,16 @@
                         <div class="flex-1">
                             <div class="emoji-input-wrap">
                                 <textarea id="msg-text-general" placeholder="Escribe tu mensaje, novedad o consulta aquí..."
-                                    class="w-full px-4 py-1.5 text-sm border border-gray-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-brisa focus:border-transparent transition-all resize-none forum-textarea"
+                                    class="w-full forum-textarea forum-input"
                                     rows="1"
                                     onkeydown="if(event.key === 'Enter' && !event.shiftKey) { event.preventDefault(); this.form.dispatchEvent(new Event('submit', {cancelable: true, bubbles: true})); }"></textarea>
                                 <button type="button" class="emoji-btn emoji-trigger" data-emoji-target="msg-text-general" aria-label="Insertar emoji">😊</button>
                                 <div class="emoji-panel" data-emoji-panel></div>
                             </div>
                         </div>
-                        <button type="submit"
-                            class="h-[42px] px-6 bg-brisa text-white rounded-lg hover:bg-brisa-dark disabled:opacity-50 transition-all shadow-md hover:shadow-lg flex items-center gap-2 font-medium flex-shrink-0">
-                            <i data-lucide="send" class="w-4 h-4"></i> <span class="hidden sm:inline">Enviar</span>
+                        <button type="submit" class="forum-send-btn">
+                            <i data-lucide="send" class="forum-send-icon"></i>
+                            <span class="hidden sm:inline">Enviar</span>
                         </button>
                     </form>
                 </div>
