--- a/index.html
+++ b/index.html
@@ -2653,16 +2653,17 @@
                                             src="https://calendar.google.com/calendar/embed?src=aca87c4282b359a629e92fa3a0fcf15d043c5647e3eb7a081f74f9d4365bd559%40group.calendar.google.com&ctz=America%2FArgentina%2FBuenos_Aires&mode=MONTH"
                                             frameborder="0" scrolling="no" allowfullscreen>
                                         </iframe>
-                                        <div class="visitas-wrap visitas-wrap--overlay">
-                                            <div class="visitas-pill">
-                                                <span class="visitas-label">Visitas a esta página</span>
-                                                <span id="contador-visitas" class="visitas-count">0</span>
-                                            </div>
-                                        </div>
                                     </div>
                                 </div>
             </div>
         </section>
+
+        <div class="visitas-wrap visitas-wrap--standalone">
+            <div class="visitas-pill">
+                <span class="visitas-label">Visitas a esta página</span>
+                <span id="contador-visitas" class="visitas-count">0</span>
+            </div>
+        </div>
 
         
 
